Changes_for_Dynamic_card

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -170,6 +170,8 @@ $pelorous-color: #3eb9b8;
 $alto-grey-color: #d1d1d1;
 $light-gray-cyan-color:#d1edec;
 $light-cyan-color:#e3f5f5;
+$very-dark-cyan: #066360;
+
 
 // common color
 $login-shadow-color: rgba(0, 0, 0, 0.2);
@@ -452,7 +454,7 @@ $widget-bg-color: $black-squeeze-grey-color;
 $widget-title-txt-color: $watercourse-color;
 $widget-title-bg-color: $white-color;
 $widget-body-color: $dark-teal-color;
-// Investmnent-welcome 
+// Investmnent-welcome
 $journey-content-color: $dark-grey-color;
 $promo-code-lbl-bg: $white-color;
 $promo-sub-lbl-color: $manatee-color;
@@ -585,7 +587,7 @@ $reward-points-bg-color: #FFD052;
 $reward-points-bg-color-grey: #DCDCDC;
 $otp-seconds-text-color: #80d3d3;
 $otp-seconds-bg-color: #00b6b6;
-//JA 
+//JA
 $awaiting-bg-color: #ffe6c2;
 $withdrawn-bg-color: #c5c5c5;
 $verify-bg-color: #ad4c4c;
